# Blender-Launcher-V2

./: .gitignore  404.html  README.md  build_mac.sh  build_style.py  index.html  pyproject.toml  update_test_responses.json  version.txt  zip_linux.sh
.github/workflows/: linux_release.yml  release-winget.yml  release.yml  ubuntu-build.yml  windows-build.yml  windows_release.yml
development/: index.html
docs/: mkdocs.yml
docs/mkdocs/: build_initialization.md  development.md  feature_request.md  file_association.md  index.md  installation.md  known_issues.md  library_folder.md  manual_build_installation.md  settings.md  troubleshooting.md  user_interface.md
extras/: blenderlauncher.desktop
feature_request/: index.html
installation/: index.html
library_folder/: index.html
scripts/: build_linux.sh  build_linux_debug.sh  build_mac.sh  build_win.bat  build_win_debug.bat  mkdocs_publish.bat  mkdocs_publish.sh  mkdocs_serve.bat  mkdocs_serve.sh  zip_linux.sh
search/: search_index.json
settings/: index.html
source/: main.py  resources_rc.py
source/items/: base_list_widget_item.py  config_list_widget_item.py  enablable_list_widget_item.py  prefs_list_widget_item.py
source/modules/: _copyfileobj.py  _platform.py  _resources_rc.py  action.py  actions.py  argument_parsing.py  bl_api_manager.py  blendfile_reader.py  build_info.py  cli_launching.py  config_info.py  connection_manager.py  enums.py  icons.py  prefs_info.py  scraper_cache.py  settings.py  shortcut.py  task.py  tasks.py  version_matcher.py
source/resources/: resources.qrc
source/resources/api/: blender_launcher_api.json  stable_builds_api_windows.json
source/resources/icons/bl/: bl.icns  make_bl_file_ico.bat  make_iconset.sh
source/resources/styles/: QCheckBox.css  QComboBox.css  QDateTimeEdit.css  QDoubleSpinBox.css  QFrame.css  QPushButton.css  QWidget.css  global.qss
source/threads/: downloader.py  extractor.py  folder_observer.py  library_drawer.py  observer.py  register.py  remover.py  renamer.py  scraper.py  template_installer.py
source/ui/: dialog_window_ui.py  main_window_ui.py  settings_window_ui.py  update_window_ui.py
source/widgets/: base_build_widget.py  base_line_edit.py  base_list_widget.py  base_menu_widget.py  base_page_widget.py  base_progress_bar_widget.py  base_tool_box_widget.py  build_state_widget.py  datetime_widget.py  download_widget.py  elided_text_label.py  foreign_build_widget.py  header.py  left_icon_button_widget.py  library_widget.py  lintable_line_edit.py  preference_factory_widget.py  preference_widget.py  sem_version_edit.py  settings_form_widget.py  tab_widget.py
source/widgets/settings_window/: appearance_tab.py  blender_builds_tab.py  connection_tab.py  general_tab.py  settings_group.py
source/windows/: base_window.py  custom_build_dialog_window.py  dialog_window.py  file_dialog_window.py  launching_window.py  main_window.py  settings_window.py  update_window.py
troubleshooting/: index.html
user_interface/: index.html
